性能优化笔记

--- a/01.资源导入检查.md
+++ b/01.资源导入检查.md
@@ -1,7 +1,11 @@
-UPR资源检查工具
-一、音频导入检查
-1.音频为双声道且左右声道声音一样，勾选Force To Mono
-2.推荐使用无压缩的.wav文件作为原始文件，针对不同平台设置不同的压缩方式。
-  移动平台一般中长音频使用Vorbis(iOS使用Mp3)方式压缩，压缩比最好；简短音效使用ADPCM方式，压缩比不是最好的，但播放过程中解码速度很快。
-3.移动平台音频采样频率建议设置为不高于22050。
-4.移动平台加载方式建议：压缩后200kb以下，Decompress On Load；200kb以上，Compressed In Memory；背景音乐或较长较大的音效，Streaming。
+## 使用UPR资源检查工具
+## 一、音频导入检查
+1. 音频为双声道且左右声道声音一样，勾选Force To Mono
+2. 推荐使用无压缩的.wav文件作为原始文件，针对不同平台设置不同的压缩方式。  
+移动平台一般中长音频使用Vorbis（iOS使用Mp3）方式压缩，压缩比最好；  
+简短音效使用ADPCM方式，压缩比不是最好的，但播放过程中解码速度很快。
+3. 移动平台音频采样频率建议设置为不高于22050。
+4. 移动平台加载方式建议：  
+压缩后200kb以下，Decompress On Load；  
+200kb以上，Compressed In Memory；  
+背景音乐或较长较大的音效，Streaming。
